--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ uploads
 client_secret_289862235070_j1veuralc1lil6qsep0gr6gr3sbcfdsb_apps.json
 lithe-willow-428116-r5-8fb0a06a023f.json
 bubbles
+painted_bubbles
