--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 uploads
 client_secret_289862235070_j1veuralc1lil6qsep0gr6gr3sbcfdsb_apps.json
-lithe-willow-428116-r5-8fb0a06a023f.json
+google_api.json
 bubbles
 painted_bubbles
 temp
-luka_api_keys.json
+api_keys.json
 test
 __pycache__
 .idea
